<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My_Application</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="receive_news">Receive News</string>
    <string name="previous"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="artist">Artist</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="addError">No se ha podido añadir un nuevo libro</string>
    <string name="updateError">No se ha podido actualizar el estado del libro</string>
    <string name="songNotFound">No se ha podido encontrar la cancion</string>
    <string name="deleteError">No se ha podido eliminar el libro</string>
    <string name="errorAnterior">"No se ha podido mostrar el anterior libro"</string>
    <string name="errorSiguiente">"No se ha podido mostrar el siguiente libro"</string>
    <string name="releasedate">Release date</string>
    <string name="selectDate">Seleccione la feha de publicacion</string>
    <string name="navigate">Navigate</string>
    <string name="book">book\n</string>
    <string name="cancel">Cancel</string>
    <string name="addedSuccesfully">Nuevo libro añadido con exito</string>
    <string name="errorUpdateBook">No se ha podido actualizar el libro</string>
    <string name="bookId">id</string>
    <string name="explicit">Explicit</string>
    <string name="not_explicit">Not explicit</string>
    <string name="album_id">2GTwVzWYGOxTLCmkxunYbQ</string>
    <string name="duration">Duration</string>
    <string name="albumImageDescription">Official album image</string>
    <string name="tokenRequestContentType">application/x-www-form-urlencoded</string>
    <string name="clientID">9b9e1f80ec1d4900aa0f166333f328ff</string>
    <string name="clientSecret">a70ef47356c841169f81ca3b9c22fbef</string>
    <string name="bearer">Bearer </string>
    <string name="callFailed">Api call failed</string>
</resources>