<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/songDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:minEms="15"
        app:layout_constraintBottom_toTopOf="@id/artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/songName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/artist"
        android:minEms="15"
        app:layout_constraintEnd_toEndOf="@id/nameInput"
        app:layout_constraintStart_toStartOf="@id/nameInput"
        app:layout_constraintTop_toBottomOf="@id/nameInput"
        app:layout_constraintBottom_toTopOf="@id/releaseDateInput"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/songArtist"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/releaseDateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/releasedate"
        android:minEms="15"
        app:layout_constraintEnd_toEndOf="@id/artist"
        app:layout_constraintStart_toStartOf="@id/artist"
        app:layout_constraintTop_toBottomOf="@id/artist"
        app:layout_constraintBottom_toTopOf="@id/explicit"
        app:layout_constraintVertical_chainStyle="spread"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/calendar_icon_24px"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/releaseDate"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        app:useMaterialThemeColors="true"
        android:checkedButton="@+id/explicit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/update"
        app:layout_constraintEnd_toEndOf="@id/releaseDateInput"
        app:layout_constraintStart_toStartOf="@id/releaseDateInput"
        app:layout_constraintTop_toBottomOf="@id/releaseDateInput"
        >
        <RadioButton
            android:id="@+id/explicit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="true"
            android:text="@string/explicit"
            android:minEms="10"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:enabled="true"
            android:text="@string/not_explicit"
            android:minEms="10"
            />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/explicit"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@id/update"
        app:layout_constraintStart_toEndOf="@id/update"
        app:layout_constraintTop_toTopOf="@id/update"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>