<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bookDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:minEms="15"
        app:layout_constraintBottom_toTopOf="@id/author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bookName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/author"
        android:minEms="15"
        app:layout_constraintEnd_toEndOf="@id/nameInput"
        app:layout_constraintStart_toStartOf="@id/nameInput"
        app:layout_constraintTop_toBottomOf="@id/nameInput"
        app:layout_constraintBottom_toTopOf="@id/releaseDateInput"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bookAuthor"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/releaseDateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/releasedate"
        android:minEms="15"
        app:layout_constraintEnd_toEndOf="@id/author"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintBottom_toTopOf="@id/ratingBar"
        app:layout_constraintVertical_chainStyle="spread"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/calendar_icon_24px"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/releaseDate"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/update"
        app:layout_constraintEnd_toEndOf="@id/releaseDateInput"
        app:layout_constraintStart_toStartOf="@id/releaseDateInput"
        app:layout_constraintTop_toBottomOf="@id/releaseDateInput"
        android:rating="3"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@id/update"
        app:layout_constraintStart_toEndOf="@id/update"
        app:layout_constraintTop_toTopOf="@id/update"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>